--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -146,7 +146,7 @@
                                     <span class="badge badge-success">{{lst.statusName}}</span>
                                 </div>
                                 <div class="order-parts">
-                                    <a href="{{WebSite_URL}}report/orderInvoice/{{lst.orderId}}" target="_blank">Print Order</a>
+                                    <a href="{{WebSite_URL}}report/orderInvoice/{{lst.guid}}" target="_blank">Print Order</a>
                                     <!-- <a href="javascript:void(0)" (click)="DownloadInvoice(lst.orderId)">Download Orders</a> -->
                                 </div>
                                 <div class="order-parts">
