--- a/src/app/Report/order-invoice/order-invoice.component.html
+++ b/src/app/Report/order-invoice/order-invoice.component.html
@@ -32,23 +32,26 @@
             </div>
             <div class="consignee bdr-bottom p10">
                 <div class="small">Consignee</div>
-                <h5 style="font-weight: 700;">{{ orderDetails[0].fName }} {{ orderDetails[0].lName }}</h5>
+                <h5 style="font-weight: 700;">{{ orderDetails[0].listUsers[0].name }}</h5>
                 <div class="consignee-address">
-                    <span>{{ orderDetails[0].address }}, {{orderDetails[0].city}} </span>
-                    <span>{{ orderDetails[0].state }}, </span>
-                    <span>{{ orderDetails[0].country }} - {{ orderDetails[0].zipCode }}</span>
+                    <span>{{ orderDetails[0].listUsers[0].address1 }}, {{orderDetails[0].listUsers[0].city}} </span>
+                    <span>{{ orderDetails[0].listUsers[0].state }}, </span>
+                    <span>{{ orderDetails[0].listUsers[0].country }} - {{ orderDetails[0].listUsers[0].zipCode }}</span>
                 </div>
                 <div class="consignee-mobile">
-                    <span>Mobile: {{ orderDetails[0].phone }}</span>
+                    <span>Mobile: {{ orderDetails[0].listUsers[0].phone }}</span>
                 </div>
                 <div class="consignee-mobile">
-                    <span>Email : {{ orderDetails[0].emailId }}</span>
+                    <span>Email : {{ orderDetails[0].listUsers[0].email }}</span>
                 </div>
                 <div class="consignee-mobile">
-                    <span>GSTIN/UIN : </span><span>06CXGPG9693E2Z4</span>
+                    <span>GSTIN/UIN : </span><span>{{ orderDetails[0].listUsers[0].gstNo }}</span>
+                </div>
+                <div class="consignee-mobile">
+                    <span>PAN No : </span><span>{{ orderDetails[0].listUsers[0].panNo }}</span>
                 </div>
                 <div class="consignee-state">
-                    <span>State Name : </span><span>Haryana, Code : 06</span>
+                    <span>State Name : </span><span>{{ orderDetails[0].listUsers[0].state }}</span>
                 </div>
             </div>
             <div class="Byer p10">
@@ -65,6 +68,9 @@
                 </div>
                 <div class="byer-mobile">
                     <span>GSTIN/UIN : </span><span>06CXGPG9693E2Z4</span>
+                </div>
+                <div class="consignee-mobile">
+                    <span>PAN No : </span><span>CFDFDF343434</span>
                 </div>
                 <div class="byer-state">
                     <span>GSTIN/UIN : </span><span>Haryana, Code : 06</span>
@@ -106,7 +112,7 @@
                 <tr>
                     <td class="">
                         <span>Buyer’s Order No</span>
-                        <h5>
+                        <h5 style="font-weight: 700;">
                             {{ orderDetails[0].orderNumber }}
                         </h5>
                     </td>
@@ -132,7 +138,7 @@
                     </td>
                     <td class="">
                         <span>Destination</span>
-                        <h5>Consignee</h5>
+                        <h5 style="font-weight: 700;">Consignee</h5>
                     </td>
                 </tr>
             </table>
@@ -151,10 +157,13 @@
                     <span>Email : {{ orderDetails[0].emailId }}</span>
                 </div>
                 <div class="delivery-mobile">
-                    <span>GSTIN/UIN : </span><span>06CXGPG9693E2Z4</span>
+                    <span>GSTIN/UIN : </span><span>{{ orderDetails[0].listUsers[0].gstNo }}</span>
+                </div>
+                <div class="consignee-mobile">
+                    <span>PAN No : </span><span>{{ orderDetails[0].listUsers[0].panNo }}</span>
                 </div>
                 <div class="delivery-state">
-                    <span>State Name : </span><span>Haryana, Code : 06</span>
+                    <span>State Name : </span><span>{{ orderDetails[0].state }}</span>
                 </div>
             </div>
         </div>
@@ -188,21 +197,21 @@
                     <td>PCS</td>
                     <td class="text-right">{{ product?.price | currency:productService?.Currency.currency:'symbol'}}</td>
                     <td>{{ product?.discount }}</td>
-                    <td class="text-right">{{ (product?.price-product?.discount) | currency:productService?.Currency.currency:'symbol'}}</td>
+                    <td class="text-right">{{ (product?.salePrice) | currency:productService?.Currency.currency:'symbol'}}</td>
                     <td class="text-right">
                         <b>
-                            {{ (product.price*product?.quantity) | currency:productService?.Currency.currency:'symbol' }}
+                            {{ (product.salePrice*product?.quantity) | currency:productService?.Currency.currency:'symbol' }}
                         </b>
                     </td>
                     <td class="text-right">{{ product?.gstRate}}</td>
                     <td class="text-right">{{ product?.gstAmount | currency:productService?.Currency.currency:'symbol'}}</td>
                     <td class="text-right">
                         <b>
-                            {{ (product.price*product?.quantity+product?.gstAmount) | currency:productService?.Currency.currency:'symbol' }}
+                            {{ (product.salePrice*product?.quantity+product?.gstAmount) | currency:productService?.Currency.currency:'symbol' }}
                         </b>
                     </td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <td></td>
                     <td>
                         <div class="text-right mt-4 mb-4">
@@ -226,7 +235,7 @@
                             <div><b>(-)0.25</b></div>
                         </div>
                     </td>
-                </tr>
+                </tr> -->
             </tbody>
             <tfoot>
                 <tr>
@@ -238,11 +247,15 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        <b>{{getTotalAmountWithOutGST() | currency:productService?.Currency.currency:'symbol'}}</b>
+                    </td>
                     <td></td>
                     <td>
-                        <h5 class="text-right"><b>Rs. {{ getTotal() | currency:productService?.Currency.currency:'symbol' }}</b></h5>
+                        <b>{{getTotalGSTAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
+                    </td>
+                    <td>
+                        <h5 class="text-right"><b>{{ getTotal() | currency:productService?.Currency.currency:'symbol' }}</b></h5>
                     </td>
                 </tr>
             </tfoot>
