--- a/src/app/pages/account/register/register.component.scss
+++ b/src/app/pages/account/register/register.component.scss
@@ -53,9 +53,31 @@
     /* disabled */
     &.disabled,
     &:disabled {
-        color: transparent;
-        fill: transparent;
+        color: rgba(255,255,255,.3);
+        fill: rgba(255,255,255,.3);
     }
+}
+.btn-loading::after {
+  content: "";
+  position: absolute; 
+  top: 25%; 
+  left: 40%; 
+  transform: translate(-40%, -50%); 
+  animation: effect 1s linear infinite; 
+  width: 26px; 
+  height: 26px; 
+  border-radius: 50%; 
+  border: 3px solid rgba(255, 255, 255, 0.3); 
+  border-top-color: #fff; 
+}
+@keyframes effect { 
+    0% { 
+        transform: rotate(0deg); 
+    } 
 
-    
+    100% { 
+        transform: rotate(360deg); 
+    } 
+
+
 }
