--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -77,16 +77,16 @@
                 <div class="dashboard-right" *ngIf="ShowTabName=='Address'">
                     <div class="dashboard">
                         <div class="page-title">
-                            <h2>My Addresses</h2>
+                            <h2>Billing Address</h2>
                         </div>
 
                         <div class="box-account box-info">
                             <div>
                                 <div class="box">
                                     <div class="box-title">
-                                        <h3>Address Book</h3>
+                                        <h3>Billing Address</h3>
                                         <a href="javascript:void(0)" (click)="NewBillingAddress(templateBillingAddress)"><i
-                                                class="fa fa-plus"></i> &nbsp; Add New Addresses</a>
+                                                class="fa fa-plus"></i> &nbsp; Add New Billing Address</a>
                                     </div>
                                     <div *ngFor="let lstBilling of lstBillingAddress">
                                         <!-- <h6>Default Billing Address</h6> -->
@@ -314,7 +314,7 @@
                                 </div>
                                 <div class="row check-out">
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">Full Name</div>
+                                        <div class="field-label">Full Name <span style="color:red">*</span></div>
                                         <input type="text" name="fName" [formControl]="checkoutForm.controls['fName']" value="" placeholder="" autocomplete="off">
                                         <div *ngIf="(checkoutForm.controls.fName.touched || Submitted) && checkoutForm.controls.fName.errors?.required" class="text text-danger">
                                             Full Name is required.
@@ -334,7 +334,7 @@
                                         </div>
                                     </div> -->
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">Company Name </div>
+                                        <div class="field-label">Company Name <span style="color:red">*</span></div>
                                         <input type="text" name="companyName" [formControl]="checkoutForm.controls['companyName']" value="" placeholder="" autocomplete="off">
                                         <div *ngIf="(checkoutForm.controls.companyName.touched || Submitted) && checkoutForm.controls.companyName.errors?.required" class="text text-danger">
                                             Company Name is required.
@@ -344,7 +344,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">Phone</div>
+                                        <div class="field-label">Phone <span style="color:red">*</span></div>
                                         <input type="text" name="phone" maxlength="10" [formControl]="checkoutForm.controls['phone']" value="" placeholder="" autocomplete="off">
                                         <div *ngIf="(checkoutForm.controls.phone.touched || Submitted) && checkoutForm.controls.phone.errors?.required" class="text text-danger">
                                             Phone No is required.
@@ -354,7 +354,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">Email Address</div>
+                                        <div class="field-label">Email Address <span style="color:red">*</span></div>
                                         <input type="text" name="emailId" [formControl]="checkoutForm.controls['emailId']" value="" placeholder="" autocomplete="off">
                                         <div *ngIf="(checkoutForm.controls.emailId.touched || Submitted) && checkoutForm.controls.emailId.errors?.required" class="text text-danger">
                                             Email address is required
@@ -364,7 +364,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">Country</div>
+                                        <div class="field-label">Country <span style="color:red">*</span></div>
                                         <select name="country" [formControl]="checkoutForm.controls['country']">
                                             <option value="" selected>Select Country</option>
                                             <option value="India">India</option>
@@ -376,8 +376,8 @@
                                         </div>
                                     </div>
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">Address</div>
-                                        <textarea name="address" [formControl]="checkoutForm.controls['address']" style="height: 65px;" value="" placeholder="" autocomplete="off"></textarea>
+                                        <div class="field-label">Address <span style="color:red">*</span></div>
+                                        <input type="text" name="address" [formControl]="checkoutForm.controls['address']" value="" placeholder="Address" autocomplete="off">
                                         <div *ngIf="(checkoutForm.controls.address.touched || Submitted) && checkoutForm.controls.address.errors?.required" class="text text-danger">
                                             Address is required
                                         </div>
@@ -387,7 +387,7 @@
                                     </div>
 
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">State</div>
+                                        <div class="field-label">State <span style="color:red">*</span></div>
                                         <!-- <input type="text" name="state" [formControl]="checkoutForm.controls['state']" value="" placeholder="" autocomplete="off"> -->
                                         <select name="country" [formControl]="checkoutForm.controls['state']">
                                             <option value="">Select State</option>
@@ -435,7 +435,7 @@
                                     </div>
 
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">City</div>
+                                        <div class="field-label">City <span style="color:red">*</span></div>
                                         <input type="text" name="city" [formControl]="checkoutForm.controls['city']" value="" placeholder="" autocomplete="off">
                                         <div *ngIf="(checkoutForm.controls.city.touched || Submitted) && checkoutForm.controls.city.errors?.required" class="text text-danger">
                                             City is required
@@ -443,7 +443,7 @@
                                     </div>
 
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">Postal Code</div>
+                                        <div class="field-label">Postal Code <span style="color:red">*</span></div>
                                         <input type="text" name="zipCode" [formControl]="checkoutForm.controls['zipCode']" value="" placeholder="" autocomplete="off">
                                         <div *ngIf="(checkoutForm.controls.zipCode.touched || Submitted) && checkoutForm.controls.zipCode.errors?.required" class="text text-danger">
                                             zipCode is required
