--- a/src/app/pages/account/register/register.component.html
+++ b/src/app/pages/account/register/register.component.html
@@ -27,7 +27,7 @@
                                 <div class="input-group-prepend india-code">
                                     <div class="input-group-text">+91</div>
                                 </div>
-                                <input type="text" autofocus id="MobileNumber" class="form-control" [readonly]="mobileverified" placeholder="Mobile Number" maxlength="10" autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.mobileNo.errors }" formControlName="mobileNo">
+                                <input type="text" id="MobileNumber" class="form-control" [readonly]="mobileverified" placeholder="Mobile Number" maxlength="10" autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.mobileNo.errors }" formControlName="mobileNo">
                                 <div *ngIf="mobileverified" class="input-group-append">
                                     <span class="input-group-text success-check">
                                         <i class="fa fa-check"></i>
@@ -56,7 +56,7 @@
                             <div class="otp-number">
 
                                 <div formArrayName="OTPArray" class="otpContainer" *ngFor="let input of OTPFormArray.controls;  index as i">
-                                    <input #formRow type="text" autofocus [formControlName]="i" id={{i}} class="form-control" maxlength="1" (keypress)="keyUpEvent($event, i)" (keyup)="keyupEvent($event, i)">
+                                    <input #formRow type="text" autofocus [formControlName]="i" id={{i}} class="form-control" maxlength="1" (keypress)="keyUpEvent($event, i)" (keyup)="keyUpEvent($event, i)">
                                 </div>
                             </div>
                             <button class=" btn btn-success mt-4" type="button" (click)="verifyMobileOtp();">Verify</button>
