--- a/src/app/pages/account/checkout/checkout.component.html
+++ b/src/app/pages/account/checkout/checkout.component.html
@@ -30,11 +30,11 @@
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Country</div>
                                     <select>
-                      <option>India</option>
-                      <option>South Africa</option>
-                      <option>United State</option>
-                      <option>Australia</option>
-                    </select>
+                                        <option>India</option>
+                                        <option>South Africa</option>
+                                        <option>United State</option>
+                                        <option>Australia</option>
+                                    </select>
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Address</div>
@@ -141,20 +141,28 @@
                                                 <li>
                                                     <div class="radio-option">
                                                         <input type="radio" name="payment-group" id="payment-1" checked>
-                                                        <label for="payment-1">Check Payments<span class="small-text">Please send a check to Store Name, Store Street, Store Town, Store State / County, Store Postcode.</span></label>
+                                                        <label for="payment-1">Check Payments<span
+                                                                class="small-text">Please send a check to Store Name,
+                                                                Store Street, Store Town, Store State / County, Store
+                                                                Postcode.</span></label>
                                                     </div>
                                                 </li>
 
                                                 <li>
                                                     <div class="radio-option">
                                                         <input type="radio" name="payment-group" id="payment-2">
-                                                        <label for="payment-2">Cash On Delivery<span class="small-text">Please send a check to Store Name, Store Street, Store Town, Store State / County, Store Postcode.</span></label>
+                                                        <label for="payment-2">Cash On Delivery<span
+                                                                class="small-text">Please send a check to Store Name,
+                                                                Store Street, Store Town, Store State / County, Store
+                                                                Postcode.</span></label>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="radio-option paypal">
                                                         <input type="radio" name="payment-group" id="payment-3">
-                                                        <label for="payment-3">PayPal<span class="image"><img src="assets/images/paypal.png" alt="" /></span></label>
+                                                        <label for="payment-3">PayPal<span class="image"><img
+                                                                    src="assets/images/paypal.png"
+                                                                    alt="" /></span></label>
                                                     </div>
                                                 </li>
                                             </ul>
