--- a/src/app/pages/account/login/login.component.html
+++ b/src/app/pages/account/login/login.component.html
@@ -11,7 +11,7 @@
         <div class="col-lg-8 login-right-bg theme-card">
                 <form class="theme-form" [formGroup]="LoginForm">
                     <div class="form-group">
-                        <label for="email">Email <span style="color: red;">*</span></label>
+                        <label for="email">Email/Mobile <span style="color: red;">*</span></label>
                         <input type="text" class="form-control" id="email" formControlName="LoginId" placeholder="Email"
                             required>
                     </div>
