--- a/src/app/pages/account/register/register.component.html
+++ b/src/app/pages/account/register/register.component.html
@@ -10,10 +10,6 @@
                     <!-- {{RegistrationForm.value|json}}  -->
 
                     <form class="theme-form" [formGroup]="RegistrationForm">
-
-
-
-
                         <!-- <div class="form-group "><input autocomplete="new-password" id="" type="tel"
                                 class="form-control mobileNumberInput" placeholder="" maxlength="10"><span
                                 class="placeholderAlternative mobileNumber">+91<span
@@ -27,7 +23,10 @@
                                 <div class="input-group-prepend india-code">
                                     <div class="input-group-text">+91</div>
                                 </div>
-                                <input type="text" id="MobileNumber" class="form-control" [readonly]="mobileverified" placeholder="Mobile Number" maxlength="10" autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.mobileNo.errors }" formControlName="mobileNo">
+                                <input type="text" id="MobileNumber" class="form-control" [readonly]="mobileverified"
+                                    placeholder="Mobile Number" maxlength="10" autocomplete="off"
+                                    [ngClass]="{ 'is-invalid': submitted && f.mobileNo.errors }"
+                                    formControlName="mobileNo">
                                 <div *ngIf="mobileverified" class="input-group-append">
                                     <span class="input-group-text success-check">
                                         <i class="fa fa-check"></i>
@@ -35,7 +34,8 @@
                                 </div>
 
                                 <div *ngIf="!mobileverified" class="input-group-append">
-                                    <button #otp class="btn btn-sm btn-success" type="button" [ngClass]="{'btn-loading': loginStart}" (click)="validateAndCheckMobile();">Send
+                                    <button #otp class="btn btn-sm btn-success" type="button"
+                                        [ngClass]="{'btn-loading': loginStart}" (click)="validateAndCheckMobile();">Send
                                         OTP</button>
                                 </div>
                             </div>
@@ -44,7 +44,7 @@
 
                         <div class="form-group text-center" *ngIf="mobileOTP">
                             <h6 class="mb-4">
-                                <b>Verify With OTP sent to {{f.mobileNo.value}}. 
+                                <b>Verify With OTP sent to {{f.mobileNo.value}}.
                                     <a href="javaScript:void(0);" (click)="mobileOTP=false">Change</a>
                                     <span class="text-danger">
                                     </span></b></h6>
@@ -55,11 +55,21 @@
                             </p> -->
                             <div class="otp-number">
 
-                                <div formArrayName="OTPArray" class="otpContainer" *ngFor="let input of OTPFormArray.controls;  index as i">
-                                    <input #formRow type="text" autofocus [formControlName]="i" id={{i}} class="form-control" maxlength="1" (keypress)="keypressEvent($event, i)" (keyup)="keyupEvent($event, i)">
+                                <!-- <div formArrayName="OTPArray" class="otpContainer"
+                                    *ngFor="let input of OTPFormArray.controls;  index as i">
+                                    <input #formRow type="tel" autofocus [formControlName]="i" id={{i}}
+                                        class="form-control" maxlength="1" (keypress)="keypressEvent($event, i)"
+                                        (keyup)="keyupEvent($event, i)">
+
+                                </div> -->
+                                <div class="otpContainer">
+                                    <input type="text"  [mask]="NumberMask" [dropSpecialCharacters]="false"
+                                        formControlName="mobileotp" [showMaskTyped]="showMask"
+                                        (focus)="addMask($event);">
                                 </div>
                             </div>
-                            <button class=" btn btn-success mt-4" type="button" (click)="verifyMobileOtp();">Verify</button>
+                            <button class=" btn btn-success mt-4" type="button"
+                                (click)="verifyMobileOtp();">Verify</button>
                         </div>
                         <div class="form-group" *ngIf="mobileOTP">
                             <h6 class="text-center" style="color: #969696">Resend OTP in:<b> {{counter}}
@@ -71,14 +81,17 @@
                             <div class="form-group">
 
                                 <label for="email">Your First and Last Name</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="fname" formControlName="name" maxlength="50" autocomplete="off" placeholder="First and Last Name" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+                                <input type="text" class="form-control" id="fname" formControlName="name" maxlength="50"
+                                    autocomplete="off" placeholder="First and Last Name"
+                                    [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
                             </div>
 
 
                             <div class="form-group">
 
                                 <label>Business Type</label><span style="color:red">*</span>
-                                <select class="custom-select" formControlName="BusinessType" [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
+                                <select class="custom-select" formControlName="BusinessType"
+                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
                                     <option value="">select</option>
                                     <option value="SoleProprietorship">Sole Proprietorship</option>
                                     <option value="Partnership">Partnership</option>
@@ -92,7 +105,8 @@
 
                             <div class="form-group">
                                 <label>Industry</label><span style="color:red">*</span>
-                                <select class="custom-select" formControlName="Industry" [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
+                                <select class="custom-select" formControlName="Industry"
+                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
                                     <option value="">select</option>
                                     <option value="Retail"> Retail (Fashion / Accessories)</option>
                                     <option value="Wholesale">Wholesale</option>
@@ -103,7 +117,8 @@
                             </div>
                             <div class="form-group">
                                 <label>Business License Type</label><span style="color:red">*</span>
-                                <select class="custom-select" formControlName="businessLicenseType" [ngClass]="{ 'is-invalid': submitted && f.businessLicenseType.errors }">
+                                <select class="custom-select" formControlName="businessLicenseType"
+                                    [ngClass]="{ 'is-invalid': submitted && f.businessLicenseType.errors }">
                                     <option value="">select</option>
                                     <option value="GSTIN"> Goods and Services Tax Identification Number (GSTIN)
                                     </option>
@@ -116,57 +131,75 @@
                             <div class="form-group" *ngIf="f.businessLicenseType.value=='GSTIN'">
 
                                 <label for="email">GST Number</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="PANNo" formControlName="GSTNo" autocomplete="off" maxlength="15" placeholder="GST No" [ngClass]="{ 'is-invalid': submitted && f.GSTNo.errors }">
+                                <input type="text" class="form-control" id="PANNo" formControlName="GSTNo"
+                                    autocomplete="off" maxlength="15" placeholder="GST No"
+                                    [ngClass]="{ 'is-invalid': submitted && f.GSTNo.errors }">
                             </div>
                             <div class="form-group" *ngIf="f.businessLicenseType.value=='BusinessPAN'">
 
                                 <label for="email">PAN Number</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="PANNo" formControlName="PANNo" maxlength="10" placeholder="PAN No" [ngClass]="{ 'is-invalid': submitted && f.PANNo.errors }">
+                                <input type="text" class="form-control" id="PANNo" formControlName="PANNo"
+                                    maxlength="10" placeholder="PAN No"
+                                    [ngClass]="{ 'is-invalid': submitted && f.PANNo.errors }">
                             </div>
                             <div class="form-group" *ngIf="f.businessLicenseType.value=='AadharCard'">
 
                                 <label for="email">Aadhar Card</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="AadharCard" formControlName="AadharCard" autocomplete="off" maxlength="12" placeholder="GST No" [ngClass]="{ 'is-invalid': submitted && f.AadharCard.errors }">
+                                <input type="text" class="form-control" id="AadharCard" formControlName="AadharCard"
+                                    autocomplete="off" maxlength="12" placeholder="GST No"
+                                    [ngClass]="{ 'is-invalid': submitted && f.AadharCard.errors }">
                             </div>
                             <div class="form-group">
 
                                 <label for="email">Business Name</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="BusinessName" formControlName="BusinessName" autocomplete="off" maxlength="100" placeholder="Business Name" [ngClass]="{ 'is-invalid': submitted && f.BusinessName.errors }">
+                                <input type="text" class="form-control" id="BusinessName" formControlName="BusinessName"
+                                    autocomplete="off" maxlength="100" placeholder="Business Name"
+                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessName.errors }">
                             </div>
 
 
                             <div class="form-group">
 
                                 <label for="email">Business Phone</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="BusinessPhone" maxlength="12" formControlName="BusinessPhone" placeholder="Business Phone" [ngClass]="{ 'is-invalid': submitted && f.BusinessPhone.errors }">
+                                <input type="text" class="form-control" id="BusinessPhone" maxlength="12"
+                                    formControlName="BusinessPhone" placeholder="Business Phone"
+                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessPhone.errors }">
                             </div>
                             <div class="form-group">
 
                                 <label for="email">Address1</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="Address1" formControlName="Address1" autocomplete="off" maxlength="100" placeholder="Address1" [ngClass]="{ 'is-invalid': submitted && f.Address1.errors }">
+                                <input type="text" class="form-control" id="Address1" formControlName="Address1"
+                                    autocomplete="off" maxlength="100" placeholder="Address1"
+                                    [ngClass]="{ 'is-invalid': submitted && f.Address1.errors }">
                             </div>
 
                             <div class="form-group">
 
                                 <label for="email">Address2</label>
-                                <input type="text" class="form-control" id="Address2" formControlName="Address2" autocomplete="off" maxlength="100" placeholder="Address2">
+                                <input type="text" class="form-control" id="Address2" formControlName="Address2"
+                                    autocomplete="off" maxlength="100" placeholder="Address2">
                             </div>
 
                             <div class="form-group">
 
                                 <label for="email">Pin Code</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="PinCode" formControlName="pinCode" autocomplete="off" maxlength="6" placeholder="PinCode" [ngClass]="{ 'is-invalid': submitted && f.pinCode.errors }">
+                                <input type="text" class="form-control" id="PinCode" formControlName="pinCode"
+                                    autocomplete="off" maxlength="6" placeholder="PinCode"
+                                    [ngClass]="{ 'is-invalid': submitted && f.pinCode.errors }">
                             </div>
 
                             <div class="form-group">
 
                                 <label for="email">City</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="City" formControlName="city" maxlength="50" autocomplete="off" placeholder="City" [ngClass]="{ 'is-invalid': submitted && f.city.errors }">
+                                <input type="text" class="form-control" id="City" formControlName="city" maxlength="50"
+                                    autocomplete="off" placeholder="City"
+                                    [ngClass]="{ 'is-invalid': submitted && f.city.errors }">
                             </div>
 
                             <div class="form-group">
                                 <label>State</label><span style="color:red">*</span>
-                                <select class="custom-select" formControlName="state" [ngClass]="{ 'is-invalid': submitted && f.state.errors }">
+                                <select class="custom-select" formControlName="state"
+                                    [ngClass]="{ 'is-invalid': submitted && f.state.errors }">
                                     <option value="">select</option>
                                     <option value="Andhra Pradesh">Andhra Pradesh</option>
                                     <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands
@@ -213,7 +246,9 @@
                             <div class="form-group">
                                 <label>Email ID</label><span style="color:red">*</span>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Email ID" maxlength="50" autocomplete="off" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+                                    <input type="text" class="form-control" placeholder="Email ID" maxlength="50"
+                                        autocomplete="off" formControlName="email"
+                                        [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
 
                                 </div>
                             </div>
@@ -222,7 +257,10 @@
 
                                 <label for="review">Password</label><span style="color:red">*</span>
                                 <div class="input-group">
-                                    <input type="{{inputType}}" class="form-control" id="review" formControlName="password" autocomplete="off" maxlength="20" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="password" required="">
+                                    <input type="{{inputType}}" class="form-control" id="review"
+                                        formControlName="password" autocomplete="off" maxlength="20"
+                                        [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+                                        placeholder="password" required="">
                                     <div class="input-group-append frm-icon" (click)="hideShowPassword()">
                                         <span class="input-group-text">
                                             <i class="{{class}}"></i>
@@ -235,13 +273,15 @@
 
 
                             <div class="mt-3 text-center">
-                                <button class="btn btn-primary px-4" type="submit" (click)="CreateRegistration();">CREATE
+                                <button class="btn btn-primary px-4" type="submit"
+                                    (click)="CreateRegistration();">CREATE
                                     ACCOUNT</button>
 
                             </div>
                         </div>
                         <div class=" text-center mt-4 font-weight-light">
-                            Already have an account? <a href="javaScript:void(0);" (click)="Login()" class="text-primary">Login</a>
+                            Already have an account? <a href="javaScript:void(0);" (click)="Login()"
+                                class="text-primary">Login</a>
                         </div>
 
                     </form>
