--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -71,6 +71,15 @@
                                         Qty
                                     </th>
                                     <th class="thead-dark">
+                                        Add. Discount (%)
+                                    </th>
+                                    <th class="thead-dark">
+                                        Add. Discount Amount
+                                    </th>
+                                    <th class="thead-dark">
+                                        Total Amount
+                                    </th>
+                                    <th class="thead-dark">
                                         GST Rate(%)
                                     </th>
                                     <th class="thead-dark">
@@ -93,6 +102,15 @@
                                         {{ product?.quantity }}
                                     </td>
                                     <td>
+                                        {{ product?.additionalDiscount }}%
+                                    </td>
+                                    <td>
+                                        {{ product?.additionalDiscountAmount | currency:productService?.Currency.currency:'symbol'}}
+                                    </td>
+                                    <td>
+                                        {{ (product?.salePrice*product?.quantity-product?.additionalDiscountAmount) | currency:productService?.Currency.currency:'symbol' }}
+                                    </td>
+                                    <td>
                                         {{ product?.gstRate }}%
                                     </td>
                                     <td>
@@ -100,11 +118,11 @@
                                     </td>
                                     <td>
                                         <span style="float: right; font-size: 16px; line-height: 20px;  font-weight: 400;">
-                                            {{ (product.salePrice*product?.quantity+product?.gstAmount) | currency:productService?.Currency.currency:'symbol' }}</span>
+                                            {{ (product.salePrice*product?.quantity-product?.additionalDiscountAmount+product?.gstAmount) | currency:productService?.Currency.currency:'symbol' }}</span>
                                     </td>
                                 </tr>
                                 <tr *ngIf='!orderDetails.length'>
-                                    <td colspan="6">
+                                    <td colspan="9">
                                         There are no products in cart
                                     </td>
                                 </tr>
@@ -112,6 +130,13 @@
                                     <td colspan="4">
                                         <b>Subtotal</b>
                                     </td>
+                                    <td>
+                                        <b>{{ getTotalAdditionalDiscountAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
+                                    </td>
+                                    <td>
+                                        {{ getTotalAmountWithDis() | currency:productService?.Currency.currency:'symbol'}}
+                                    </td>
+                                    <td></td>
                                     <td>
                                         <b>{{ getTotalGSTAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
                                     </td>
@@ -122,7 +147,7 @@
                                 </tr>
 
                                 <tr>
-                                    <td colspan="4">
+                                    <td colspan="7">
                                         <b> Packing</b>
                                     </td>
                                     <td colspan="2">
@@ -131,10 +156,10 @@
                                     </td>
                                 </tr>
                                 <tr class="total">
-                                    <td colspan="5">
+                                    <td colspan="7">
                                         <b>Total</b>
                                     </td>
-                                    <td>
+                                    <td colspan="2">
                                         <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                             {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                                     </td>
