--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -70,10 +70,10 @@
                                     <th class="thead-dark">
                                         Qty
                                     </th>
-                                    <th class="thead-dark">
+                                    <th class="thead-dark" *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
                                         Add. Discount (%)
                                     </th>
-                                    <th class="thead-dark">
+                                    <th class="thead-dark" *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
                                         Add. Discount Amount
                                     </th>
                                     <th class="thead-dark">
@@ -101,10 +101,10 @@
                                     <td>
                                         {{ product?.quantity }}
                                     </td>
-                                    <td>
+                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
                                         {{ product?.additionalDiscount }}%
                                     </td>
-                                    <td>
+                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
                                         {{ product?.additionalDiscountAmount | currency:productService?.Currency.currency:'symbol'}}
                                     </td>
                                     <td>
@@ -122,15 +122,18 @@
                                     </td>
                                 </tr>
                                 <tr *ngIf='!orderDetails.length'>
-                                    <td colspan="9">
+                                    <td colspan="9" *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
+                                    <td colspan="7" *ngIf="orderDetails[0].orderDetails?.additionalDiscount==0">
                                         There are no products in cart
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td colspan="4">
+                                    <td colspan="3">
                                         <b>Subtotal</b>
                                     </td>
-                                    <td>
+                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
+                                    </td>
+                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
                                         <b>{{ getTotalAdditionalDiscountAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
                                     </td>
                                     <td>
@@ -147,18 +150,23 @@
                                 </tr>
 
                                 <tr>
-                                    <td colspan="7">
+
+                                    <td colspan="5">
                                         <b> Packing</b>
                                     </td>
+                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
+                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
                                     <td colspan="2">
                                         <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                             <b>Free Packing</b></span>
                                     </td>
                                 </tr>
                                 <tr class="total">
-                                    <td colspan="7">
+                                    <td colspan="5">
                                         <b>Total</b>
                                     </td>
+                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
+                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
                                     <td colspan="2">
                                         <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                             {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
